fix: Changed code to make this work on safari

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -66,6 +66,8 @@ body,
     position: absolute;
     height: 100%;
     width: 100%;
+    /* Just with this line below, this now works in safari */
+    -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     display: flex;
     align-items: center;
